Fix: aligns

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -4,7 +4,7 @@
  */
 
 .heroBanner {
-  /* padding: 4rem 0; */
+  padding: 4rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 966px) {
   .heroBanner {
-    padding: 2rem;
+    padding-bottom: 2rem;
   }
 }
 
